<resources>
    <string name="app_name">Prime</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_monitoring">Monitoring</string>
    <string name="menu_report">Reports</string>
    <string name="menu_stations">Stations</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>


    <string name="settingstext">Allow Shop Server Portal to send notification by logging into the sender gmail and turning on this &lt;a href=https://myaccount.google.com/lesssecureapps>setting&lt;/a></string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="scan">SCAN</string>
    <string name="transfer">TRANSFER</string>
    <string name="general">GENERAL SETTINGS</string>
    <string name="shop_name">Shop Name:</string>
    <string name="branch_name">Branch Name:</string>
    <string name="change_logo">CHANGE LOGO</string>
    <string name="date_and_time">DATE AND TIME</string>
    <string name="server_date">Server Date:</string>
    <string name="server_time">Server Time:</string>
    <string name="timezone">Timezone:</string>
    <string name="additional_settings">ADDITIONAL SETTINGS</string>
    <string name="auto_shutdown">Auto Shutdown</string>
    <string name="refresh_server">REFRESH SERVER</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="admin_settings">ADMIN SETTINGS</string>
    <string name="staff_settings">STAFF SETTINGS</string>
    <string name="reboot">Reboot</string>
    <string name="view">View</string>
    <string name="download">DOWNLOAD</string>
    <string name="email">Email Address</string>
    <string name="shopnamehint">Shop Name</string>
    <string name="branchnamehint">Branch Name</string>
    <string name="success_msg">Success!</string>
    <string name="error_msg">Failed!</string>
    <string name="snackBarNoNetConnectivity">snack</string>


    <string-array name="spinnerItems">
        <item>Wash</item>
        <item>Dry</item>
        <item>Abort</item>
        <item>Other</item>
    </string-array>

    <string-array name="spinnerDays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="spinnerShifts">
        <item>One</item>
        <item>Two</item>
    </string-array>

    <string name="array">Presets</string>
    <string-array name="array">
        <item>Wash</item>
        <item>Dry</item>
        <item>Other</item>
    </string-array>

    <string-array name="bypass">
        <item>Wash</item>
        <item>Dry</item>
    </string-array>
</resources>
