<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#02aff3"
            android:text="@string/add"
            style="?attr/buttonBarStyle"
            android:textColor="@color/white"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="10dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="#02aff3"
            app:icon="@drawable/hostscan"
            style="?attr/buttonStyle"
            android:textColor="@color/white"
            android:paddingLeft="27dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/scan"
            android:layout_marginRight="10dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="?attr/buttonBarStyle"
            android:textColor="@color/white"
            android:backgroundTint="#FF0000"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />



    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="@android:color/white"
        android:listSelector="@android:color/darker_gray" />

</LinearLayout>