<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/staff"
        android:padding="10dp">



        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/editStaff"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:text="@string/staff_settings"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editStaff"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/scan"
            android:text="@string/edit"
            android:textColor="@color/black"
            app:icon="@drawable/ic_edit"
            app:iconSize="20dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/editStaff"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/staffUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/staffUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="staff"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/staffPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/staffUserNameLayout"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/staffPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/password"
                tools:ignore="autoFill,LabelFor" />

        </LinearLayout>



    </RelativeLayout>


</LinearLayout>