<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/editAccount"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/general"/>

        <ImageButton
            android:id="@+id/editAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            android:layout_alignParentEnd="true"
            style="?attr/actionBarDivider"
            android:textColor="@color/white"
            android:contentDescription="@string/scan"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/editAccount"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/shopLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/shop_name"/>

            <TextView
                android:id="@+id/shopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/shop_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/branchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopLayout"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/branch_name"/>

            <TextView
                android:id="@+id/branchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/branch_name"/>

        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@id/editLogo"
            android:background="#808080" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/editLogo"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/change_logo"/>

        <ImageButton
            android:id="@+id/editLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            android:layout_alignParentEnd="true"
            style="?attr/actionBarDivider"
            android:textColor="@color/white"
            android:contentDescription="@string/scan"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/editLogo"
            android:background="#808080" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@id/editDateTime"
            android:background="#808080" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/editDateTime"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:paddingTop="10dp"
            android:text="@string/date_and_time"/>

        <ImageButton
            android:id="@+id/editDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            android:layout_alignParentEnd="true"
            style="?attr/actionBarDivider"
            android:textColor="@color/white"
            android:contentDescription="@string/scan"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@id/editDateTime"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/server_date"/>

            <TextView
                android:id="@+id/serverDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/shop_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateLayout"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/server_time"/>

            <TextView
                android:id="@+id/serverTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/branch_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeZoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeLayout"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/timezone"/>

            <TextView
                android:id="@+id/serverTimeZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/branch_name"/>

        </LinearLayout>



    </RelativeLayout>


</LinearLayout>