<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#02aff3"
            android:text="@string/add"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="11dp" />

        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:backgroundTint="#02aff3"
            android:text="@string/edit"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/scan" />

        <com.google.android.material.button.MaterialButton
            app:rippleColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textColor="@color/white"
            android:layout_weight="1"
            app:backgroundTint="#FF0000"
            android:layout_marginEnd="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:weightSum="3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Service"/>

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:text="Price"/>

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:text="Time Addded"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtStationName2"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Fold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txtServiceType2"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="30"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="2019-10-17 3:10 PM"
            android:gravity="start"
            android:layout_weight="1"
            android:id="@+id/txtIp1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtStationName3"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Full Service"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txtServiceType3"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="40"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="2019-10-17 3:12 PM"
            android:gravity="start"
            android:layout_weight="1"
            android:id="@+id/txtIp3"/>



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="@android:color/white"
        android:listSelector="@android:color/darker_gray"
        android:visibility="gone"/>

</LinearLayout>